[gd_scene load_steps=16 format=3 uid="uid://o3mf41ds8bme"]

[ext_resource type="Script" path="res://scripts/MainScene.gd" id="1_m7dcp"]
[ext_resource type="Texture2D" uid="uid://do6gaaltjys6j" path="res://assets/background.png" id="2_h5v7i"]
[ext_resource type="Script" path="res://scripts/SpaceStation.gd" id="3_whgua"]
[ext_resource type="Texture2D" uid="uid://dv0deiefgsnpf" path="res://assets/spaceStationSprite.png" id="4_pm2yl"]
[ext_resource type="Script" path="res://scripts/Magnet.gd" id="5_td0w0"]
[ext_resource type="Texture2D" uid="uid://cheexu4rdyhm8" path="res://assets/redmagnet.png" id="6_olpsw"]
[ext_resource type="Texture2D" uid="uid://damv4fsg0tmdw" path="res://assets/redBeam.png" id="7_behfe"]
[ext_resource type="Texture2D" uid="uid://b336sq8iu0gkv" path="res://assets/collectionzone.png" id="8_jndfd"]
[ext_resource type="Script" path="res://scripts/Earth.gd" id="9_gvxih"]
[ext_resource type="Texture2D" uid="uid://dfgas3k1c7vgd" path="res://assets/earth.png" id="10_xk3te"]
[ext_resource type="Script" path="res://scripts/Spawner.gd" id="11_d1c2s"]
[ext_resource type="FontFile" uid="uid://dc0tj6yde6fby" path="res://fonts/8bitlim.ttf" id="12_8nirl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s3dhi"]
radius = 82.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jwqyl"]
radius = 450.0

[sub_resource type="Theme" id="Theme_qx5wn"]
default_font = ExtResource("12_8nirl")
default_font_size = 30

[node name="MainScene" type="Node2D" node_paths=PackedStringArray("spawner", "camera", "menuPosition", "spaceStation", "magnet", "earth", "missionStatement", "waveName", "gameOver", "gameWin")]
process_mode = 3
texture_filter = 1
script = ExtResource("1_m7dcp")
spawner = NodePath("Spawner")
camera = NodePath("SpaceStation/Camera2D")
menuPosition = NodePath("CanvasLayer/Control/MenuPosition")
spaceStation = NodePath("SpaceStation")
magnet = NodePath("SpaceStation/Magnet")
earth = NodePath("Earth")
missionStatement = NodePath("CanvasLayer/Control/missionStatement")
waveName = NodePath("CanvasLayer/Control/waveName")
gameOver = NodePath("CanvasLayer/Control/gameOver")
gameWin = NodePath("CanvasLayer/Control/gameWin")

[node name="background" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(225, 478)
texture = ExtResource("2_h5v7i")
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 2000, 1800)

[node name="SpaceStation" type="Node2D" parent="." node_paths=PackedStringArray("magnet", "planet", "hpBar", "weightLabel", "pointsLabel")]
process_mode = 1
position = Vector2(500, 300)
script = ExtResource("3_whgua")
magnet = NodePath("Magnet")
planet = NodePath("../Earth")
hpBar = NodePath("../CanvasLayer/Control/playerHpBar")
weightLabel = NodePath("../CanvasLayer/Control/weightLabel")
pointsLabel = NodePath("../CanvasLayer/Control/pointsLabel")

[node name="Camera2D" type="Camera2D" parent="SpaceStation"]
process_mode = 3
offset = Vector2(-200, 2.08165e-12)

[node name="Sprite2D" type="Sprite2D" parent="SpaceStation"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_pm2yl")

[node name="Magnet" type="Node2D" parent="SpaceStation" node_paths=PackedStringArray("MagArea", "beamSprite", "magSprite")]
script = ExtResource("5_td0w0")
MagArea = NodePath("MagArea")
beamSprite = NodePath("MagArea/Sprite2D")
magSprite = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="SpaceStation/Magnet"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_olpsw")

[node name="MagArea" type="Area2D" parent="SpaceStation/Magnet"]
position = Vector2(2.08165e-12, -68)

[node name="Sprite2D" type="Sprite2D" parent="SpaceStation/Magnet/MagArea"]
modulate = Color(1, 1, 1, 0.498039)
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("7_behfe")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SpaceStation/Magnet/MagArea"]
polygon = PackedVector2Array(-49, -50, 50, -50, 36, 50, -36, 50)

[node name="CollectionArea" type="Area2D" parent="SpaceStation"]

[node name="Sprite2D" type="Sprite2D" parent="SpaceStation/CollectionArea"]
modulate = Color(1, 1, 1, 0.72549)
scale = Vector2(1.6, 1.6)
texture = ExtResource("8_jndfd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceStation/CollectionArea"]
shape = SubResource("CircleShape2D_s3dhi")

[node name="Earth" type="Node2D" parent="." node_paths=PackedStringArray("hpBar")]
process_mode = 1
position = Vector2(1100, 600)
script = ExtResource("9_gvxih")
hpBar = NodePath("../CanvasLayer/Control/EarthHpBar")

[node name="Sprite2D" type="Sprite2D" parent="Earth"]
scale = Vector2(10, 10)
texture = ExtResource("10_xk3te")

[node name="Area2D" type="Area2D" parent="Earth"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Earth/Area2D"]
shape = SubResource("CircleShape2D_jwqyl")

[node name="Spawner" type="Node" parent="." node_paths=PackedStringArray("debrisHolder", "spawnTimer", "afterWaveTimer")]
process_mode = 1
script = ExtResource("11_d1c2s")
debrisHolder = NodePath("debris")
spawnTimer = NodePath("spawnTimer")
afterWaveTimer = NodePath("afterWaveTimer")

[node name="debris" type="Node2D" parent="Spawner"]

[node name="spawnTimer" type="Timer" parent="Spawner"]
wait_time = 3.0
one_shot = true

[node name="afterWaveTimer" type="Timer" parent="Spawner"]
wait_time = 6.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1155.0
offset_bottom = 646.0
theme = SubResource("Theme_qx5wn")

[node name="EarthHpBar" type="TextureProgressBar" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1052.0
offset_top = 548.0
offset_right = 1152.0
offset_bottom = 648.0
value = 100.0
fill_mode = 3
texture_progress = ExtResource("10_xk3te")

[node name="playerHpBar" type="TextureProgressBar" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
value = 100.0
fill_mode = 3
texture_progress = ExtResource("4_pm2yl")

[node name="weightLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 100.0
offset_top = 2.0
offset_right = 205.0
offset_bottom = 37.0
text = "weight: 0/20"

[node name="pointsLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 100.0
offset_top = 39.0
offset_right = 157.0
offset_bottom = 62.0
text = "money: 0"

[node name="MenuPosition" type="Control" parent="CanvasLayer/Control"]
anchors_preset = 0

[node name="missionStatement" type="Label" parent="CanvasLayer/Control"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -119.5
offset_top = -32.0
offset_right = 119.5
grow_horizontal = 2
grow_vertical = 0
text = "Mission Statement"

[node name="waveName" type="Label" parent="CanvasLayer/Control"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 32.0
grow_horizontal = 2
text = "Wave Name"

[node name="gameOver" type="Label" parent="CanvasLayer/Control"]
visible = false
modulate = Color(0.568627, 0.00392157, 0.92549, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -16.0
offset_right = 67.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"

[node name="gameWin" type="Label" parent="CanvasLayer/Control"]
visible = false
modulate = Color(0.568627, 0.00392157, 0.92549, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -16.0
offset_right = 67.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU WIN"

[connection signal="gameOver" from="SpaceStation" to="." method="game_over"]
[connection signal="body_entered" from="SpaceStation/Magnet/MagArea" to="SpaceStation/Magnet" method="_on_pos_mag_area_body_entered"]
[connection signal="body_exited" from="SpaceStation/Magnet/MagArea" to="SpaceStation/Magnet" method="_on_pos_mag_area_body_exited"]
[connection signal="body_entered" from="SpaceStation/CollectionArea" to="SpaceStation" method="_on_collection_area_body_entered"]
[connection signal="gameOver" from="Earth" to="." method="game_over"]
[connection signal="body_entered" from="Earth/Area2D" to="Earth" method="_on_area_2d_body_entered"]
[connection signal="transitionBreakSignal" from="Spawner" to="." method="_on_spawner_transition_break_signal"]
[connection signal="timeout" from="Spawner/spawnTimer" to="Spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="Spawner/afterWaveTimer" to="Spawner" method="_on_after_wave_timer_timeout"]
